--- a/OtraPrueba.html
+++ b/OtraPrueba.html
@@ -2,8 +2,9 @@
     <html>
         <title>Trabajo</title>
         <head>
-            <center><h1><font color=#5F9EA0>Pruebas sepsis</h1></center>
+            <center><h1><font color=#5F9EA0>Pruebas sepsis</font></h1></center>
         </head>
         <body>
+            <p><text-aling="Justify"><h3> saga de videojuegos es desarrollada por la compañía programadora de software japonesa Game Freak, con personajes creados por Satoshi Tajiri para la empresa de juguetes Creatures Inc., y a su vez distribuida por Nintendo. La misión en estos juegos es capturar y entrenar a los pokémon (criaturas cuya denominación da nombre al juego), que hasta la fecha alcanzan el número de 802. La posibilidad de intercambiarlos le hizo conseguir una popularidad que se plasmó en un éxito de ventas y la consiguiente aparición de una serie animada, películas y diverso merchandising como peluches, juguetes y cartas.</h3></text></p>
         </body>
     </html>    
